--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - db_data_sqlite:/var/lib/kutt
       - custom:/kutt/custom
     env_file:
-      - ../stack.env
+      - stack.env
     environment:
       DB_FILENAME: "/var/lib/kutt/data.sqlite"
     ports:
